...
        requestedByLabel.text = employeeName
        
//        activityIndicator.hidesWhenStopped = true
//        activityIndicator.isHidden = true
//        activityBckgrd.isHidden = true
        
        view.accessibilityIdentifier = "ChangeOrders View"
        self.backButton.accessibilityIdentifier = "CO_backButton"
        self.colorSpecLabel.accessibilityIdentifier = "CO_colorSpecLabel"
        self.colorSpecText.accessibilityIdentifier = "CO_colorSpecText"
        self.datePickerFields.accessibilityIdentifier = "CO_datePickerFields"
        self.descripLabel.accessibilityIdentifier = "CO_descripLabel"
        self.descripText.accessibilityIdentifier = "CO_descripText"
        self.formType.accessibilityIdentifier = "CO_formType"
        self.jobNameLabel.accessibilityIdentifier = "CO_jobNameLabel"
        self.locationLabel.accessibilityIdentifier = "CO_locationLabel"
        self.locationText.accessibilityIdentifier = "CO_locationText"
        self.materialLabel.accessibilityIdentifier = "CO_materialLabel"
        self.materialText.accessibilityIdentifier = "CO_materialText"
        self.quantityLabel.accessibilityIdentifier = "CO_quantityLabel"
        self.quantityText.accessibilityIdentifier = "CO_quantityText"
        self.requestedByLabel.accessibilityIdentifier = "CO_requestedByLabel"
        self.sendButton.accessibilityIdentifier = "CO_sendButton"
        
        setJobName()
        setThisDismissableKeyboard()
        
        if formTypeVal == tool_rental {
            viewForToolRental()
...
        
        if formTypeVal == supplies_request {
            if images.count >= materialsCollection.count {
                dismiss(animated: true, completion: nil)
                
                let alert = UIAlertController(title: "Confirm", message: "Are you sure you would like to send the \(formTypeVal)?", preferredStyle: UIAlertController.Style.alert)
                let yes = UIAlertAction(title: "YES", style: .default, handler: { action in self.sendCO(images: images) })
                
                alert.addAction(yes)
                alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
                self.present(alert, animated: true, completion: nil)
            } else {
                picker.showAlert(withTitle: "More Photos", message: "You must take at least \(materialsCollection.count) photos for each piece of material.")
            }
            
        } else if images.count < 2 {
...
