...
}

extension ScheduleView: JTAppleCalendarViewDataSource, JTAppleCalendarViewDelegate {
    
    func initialCalSetup() {
//        HomeView.scheduleReadyNotif = false
        view.accessibilityIdentifier = "Schedule View"
        jobsTable.accessibilityIdentifier = "Sched_jobsTable"
        monthLabel.accessibilityIdentifier = "Sched_monthLabel"
        yearLabel.accessibilityIdentifier = "Sched_yearLabel"
        backButton.accessibilityIdentifier = "Sched_backButton"
        activityIndicator.accessibilityIdentifier = "Sched_activityIndicator"
        jobDetailView.accessibilityIdentifier = "Sched_jobDetailView"
        jobNameLbl.accessibilityIdentifier = "Sched_jobNameLbl"
        poNumberLbl.accessibilityIdentifier = "Sched_poNumberLbl"
        installDateLbl.accessibilityIdentifier = "Sched_installDateLbl"
        directionsBtn.accessibilityIdentifier = "Sched_directionsBtn"
        daysOfWeekView.accessibilityIdentifier = "Sched_daysOfWeekView"
        cancelBtn.accessibilityIdentifier = "Sched_cancelBtn"
        
        submitButton.bringSubviewToFront(submitButton)
        submitButton.isUserInteractionEnabled = true
        submitButton.addTarget(self, action: #selector(getDaysAccepted), for: .touchUpInside)
        
        calendarView.calendarDelegate = self
...
        calendarView.scrollDirection = .horizontal
        calendarView.visibleDates { visibleDates in
            self.loading()
            self.getCalendarInfo()
            self.setMonthYearElements(visibleDates: visibleDates)
        }
        calendarView.accessibilityIdentifier = "Sched_calendarView"
    }
    
    func configureCalendar(_ calendar: JTAppleCalendarView) -> ConfigurationParameters {
        calendar.accessibilityIdentifier = "Sched_calendarView"
        let calndr = Calendar.current
        
...
