...
}


extension HomeView {
    
    func setIdentifiers() {
        view.accessibilityIdentifier = "Home View"
        bkgdView.accessibilityIdentifier = "Home_bkgdView"
        homeFanMenu.accessibilityIdentifier = "Home_homeFanMenu"
        userLabel.accessibilityIdentifier = "Home_userLabel"
        profileBtn.accessibilityIdentifier = "Home_profileBtn"
    }
    
    func getJobCheckupInfo() {
        let returnTwr = returnTomorrowSwitch.isOn,
         addedMaterial = self.requiredAddedMaterialsSwitch.isOn
        guard let po = HomeView.todaysJob.poNumber ?? UserDefaults.standard.string(forKey: DefaultKeys.todaysJobPO) else {
...
        menuView.onItemWillClick = { button in
            print("button: ", button.id, button.image)
            self.hideShowProfile()

            if button.id != "main" { self.chooseSegue(image: button.image) }
        }
        menuView.accessibilityIdentifier = "Home_menuView"
        
        homeFanMenu.addSubview(menuView)
        for subVw in homeFanMenu.subviews {
            subVw.backgroundColor = .clear
        }
    }
...
        else if let msg = responseType["msg"] { showAlert(withTitle: "Error", message: msg) }
        else if let error = responseType["error"] { failedUpload(error: error) }
    }

    func showRentOrReturnWin() {

        let alert = UIAlertController(title: "Rent or Return", message: "Are you renting or returning a tool?", preferredStyle: .alert)
        let rental = UIAlertAction(title: "Rental", style: .default) { action in
            self.performSegue(withIdentifier: "toolRental", sender: nil)
        }
        let returnTool = UIAlertAction(title: "Return", style: .default) { action in
            self.performSegue(withIdentifier: "toolReturn", sender: nil)
        }
        let cancel = UIAlertAction(title: "Cancel", style: .cancel)

        alert.addAction(rental)
        alert.addAction(returnTool)
...
        } else {
            print("File not found: \(imagePath)"); return
        }
    }

    func showSRFormOrMap() {
        let alert = UIAlertController(title: "Field Supplies", message: "Where to get your supplies?", preferredStyle: .alert)
        let shopReq = UIAlertAction(title: "Request from Shop", style: .default) { action in
            self.performSegue(withIdentifier: "suppliesReq", sender: nil)
        }
        let goToMap = UIAlertAction(title: "Pick up from Store", style: .default) { action in
            self.performSegue(withIdentifier: "map", sender: nil)
        }
        let cancel = UIAlertAction(title: "Cancel", style: .cancel)

        alert.addAction(shopReq)
        alert.addAction(goToMap)
...
